# anydiff

./: pyproject.toml
src/anydiff/: __init__.py  bundle.css  bundle.js  demo.ipynb  index.js  marimo_demo.py  package-lock.json  package.json
