[project]
name = "anydiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nehal Patel", email = "nehal@alum.mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9.13",
]

[project.scripts]
anydiff = "anydiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "marimo>=0.11.8",
    "watchfiles>=1.0.4",
]
